--- a/view/templates/hotel-reviews-form.html
+++ b/view/templates/hotel-reviews-form.html
@@ -24,7 +24,8 @@
 			</div>
 			<div class="form-group col-sm-6">
 				<label>
-					<input class="btn btn-default btn-primary btn-block" type="button" value="Back">
+					<input class="btn btn-default btn-primary btn-block"
+          type="button" value="Back" ng-click="$parent.showAction=0" >
 				</label>
 			</div>
 		</div>
